# GeoIncident

./: .dockerignore  .gitignore  .tool-versions  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
backend/: Dockerfile  __init__.py  incident_state_machine.py
backend/blueprints/: incident.py
backend/db/: schema.sql  seed.sql
frontend/: Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/components/: AddIncidentForm.tsx  Incident.tsx  IncidentActionButton.tsx  Map.tsx
frontend/src/styles/: styles.css
tests/: conftest.py  test_incident.py
