[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "GeoIncident"
version = "0.1.0"

description = "A project for handling geo incidents"
readme = "README.md"
requires-python = ">=3.7"


[tool.setuptools.packages.find]
where = ["."]
include = ["backend*", "tests*"]